# Squirrel

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  GNUmakefile  LICENSE  README.md  clang-format.cmake  lint.cmake
.devcontainer/: Dockerfile  devcontainer.json
.github/linters/: .hadolint.yaml
.github/workflows/: build.yml  ci.yml  docker-image.yml  lint.yml  stale.yml
MariaDB/AFL/: Makefile  afl-fuzz  afl-fuzz.c  config.h
MariaDB/docker/: Dockerfile  run.py
MariaDB/docker/init_lib/: 100  1002  1008  1009  1010  1011  1015  1023  1024  107  111  112  114  117  119  120  124  127  128  132  133  135  14  141  143  144  148  149  151  153  155  159  162  167  174  179  188  190  191  197
MariaDB/docker/input/: 4.txt  8.txt  new
MariaDB/include/: ast.h  define.h  utils.h
MariaDB/parser/: bison_parser.cpp  flex_lexer.h  parser_typedef.h
MariaDB/src/: ast.cpp  mutate.cpp  utils.cpp
MySQL/AFL/: Makefile  afl-fuzz  afl-fuzz.c
MySQL/docker/: Dockerfile  create.sh  run.py
MySQL/docker/init_lib/: 110  129  138  16  160  164  168  173  175
MySQL/docker/input/: 3.txt  7.txt  z.txt
MySQL/fuzz_root/: global_data_lib_mysql  safe_generate_type_mysql
MySQL/fuzz_root/mysql_initlib/: 1017  165  166  180  185
MySQL/parser/: flex.l
MySQL/src/: ast.cpp
PostgreSQL/AFL/: Makefile  afl-fuzz  afl-fuzz.c
PostgreSQL/docker/: Dockerfile  run.py
PostgreSQL/docker/init_lib/: 1.txt  2.txt  5  5.txt  8.txt  x1  x3
PostgreSQL/docker/input/: cs_ss  ct_ci_in_drop  ct_ci_ri  ct_cv_is  ct_ins_drop  ct_is_ss  ct_st_re  ct_st_union  trigger
PostgreSQL/fuzz_root/: global_data_lib
PostgreSQL/fuzz_root/input/: 1
PostgreSQL/fuzz_root/mysql_initlib/: 1001  1006  1018  11  12  126  131  136  145  152  157  178  186  192
PostgreSQL/fuzz_root/postgres_initlib/: 1  3  4
PostgreSQL/include/: mutate.h
PostgreSQL/parser/: bison.y  bison_parser.cpp  bison_parser.output  flex_lexer.cpp  flex_lexer.h
PostgreSQL/src/: ast.cpp  mutate.cpp  utils.cpp
SQLite/AFL/: afl-fuzz.c
SQLite/fuzz_root/init_lib/: 13.txt  20.txt  8.txt  new_code
SQLite/fuzz_root/input/: 12.txt  14.txt  17.txt  22.txt  4.txt  5.txt  new1.txt  new3.txt
SQLite/include/: ast.h  define.h  utils.h
SQLite/parser/: Makefile  bison_parser.cpp  bison_parser.h  bison_parser.output  bison_parser.y  flex_lexer.cpp  flex_lexer.h
SQLite/src/: ast.cpp  mutator.cpp  utils.cpp
data/: config_mariadb.yml  config_mysql.yml  config_postgresql.yml  config_pqsql.yml  config_sqlite.yml  run.sh
data/fuzz_root/: global_data_lib_pqsql  pragma
data/fuzz_root/init_lib/: 2.txt
data/fuzz_root/input/: 10.txt  16.txt  18.txt  25.txt  26.txt  9.txt
data/fuzz_root/mysql_init_lib/: 1000  1003  1007  102  1020  1025  105  121  139  140  15  154  161  17  170  171  172  184  198  strip_mysql  strip_trigger_collect
data/fuzz_root/mysql_input/: 5.txt
data/fuzz_root/pqsql_init_lib/: 3.txt  4.txt  7.txt  init
data/fuzz_root/pqsql_input/: ct_cv_ss  ct_in_alter_select  ct_ss_ds
include/: afl-fuzz.h
scripts/: .pylintrc  noxfile.py  pyproject.toml
scripts/dockers/mariadb/: Dockerfile
scripts/dockers/mysql/: Dockerfile
scripts/dockers/postgresql/: Dockerfile
scripts/dockers/sqlite/: Dockerfile
scripts/utils/: run.py
squirrel_srcs/MariaDB/docker/: Dockerfile  run.py  safe_generate_type_mysql
squirrel_srcs/MariaDB/parser/: bison_parser.h
squirrel_srcs/MariaDB/src/: mutate.cpp
squirrel_srcs/MySQL/docker/: Dockerfile
squirrel_srcs/MySQL/parser/: Makefile  flex_lexer.cpp
squirrel_srcs/PostgreSQL/AFL/: Makefile
squirrel_srcs/PostgreSQL/docker/: create.sh  safe_generate_type
squirrel_srcs/PostgreSQL/include/: ast.h  define.h
squirrel_srcs/PostgreSQL/parser/: bison_parser.h  flex.l
squirrel_srcs/SQLite/: .gitignore  CMakeLists.txt  Makefile  clang-format.cmake  config.yml  custom_mutator.cc  run.sh
squirrel_srcs/SQLite/AFL/: Makefile  afl-fuzz.c  afl-fuzz_formatted.c  afl-fuzz_formatted_orig.c  change.diff
squirrel_srcs/SQLite/fuzz_root/input/: 15.txt  23.txt  24.txt
squirrel_srcs/SQLite/include/: ast.h  define.h  mutator.h  utils.h
squirrel_srcs/SQLite/parser/: bison_parser.y  flex_lexer.l
squirrel_srcs/SQLite/src/: ast.cpp  mutator.cpp  utils.cpp
squirrel_srcs/SQLite/srcs/: custom_mutator.cc
squirrel_srcs/migrated/: .gdb_history  CMakeLists.txt  README.md  clang-format.cmake  client.cc  config_mysql.yml  config_sqlite.yml  config_test.yml  run.sh
squirrel_srcs/migrated/fuzz_root/init_lib/: 1.txt  7.txt  sqltest
squirrel_srcs/migrated/fuzz_root/input/: 11.txt  19.txt  21.txt  3.txt  6.txt  new2.txt  new4.txt
squirrel_srcs/migrated/fuzz_root/mysql_init_lib/: 1005  101  1013  1014  1021  1022  106  108  123  125  13  130  134  137  142  150  156  163  176  18  181  183  187  189  194  195
squirrel_srcs/migrated/fuzz_root/mysql_input/: 2.txt
squirrel_srcs/migrated/srcs/: custom_mutator.cc  db.cc  db_driver.cc
squirrel_srcs/migrated/srcs/internal/client/: client.cc  client_mysql.cc  client_mysql.h  test_client.cc
squirrel_srcs/migrated/srcs/internal/mysql/: mysql.cc  mysql.h
squirrel_srcs/migrated/srcs/internal/mysql/include/: ast.h  define.h  mutator.h  utils.h
squirrel_srcs/migrated/srcs/internal/mysql/parser/: Makefile  bison.y  bison_parser.cpp  bison_parser.output  flex.l  flex_lexer.cpp  flex_lexer.h  parser_typedef.h
squirrel_srcs/migrated/srcs/internal/mysql/srcs/: ast.cpp
squirrel_srcs/migrated/srcs/internal/sqlite/: sqlite.cc  sqlite.h
squirrel_srcs/migrated/srcs/internal/sqlite/parser/: Makefile  bison_parser.cpp  bison_parser.h  bison_parser.output  flex_lexer.l
src/: afl-fuzz.c
srcs/: custom_mutator.cc  db.h  db_driver.cc  db_factory.cc  env.h
srcs/internal/client/: client.cc  client.h  client_mysql.cc  client_mysql.h  client_postgresql.cc  client_postgresql.h  test_client.cc
srcs/internal/mysql/: mysql.cc  mysql.h
srcs/internal/postgresql/: postgresql.cc  postgresql.h
srcs/internal/sqlite/: sqlite.cc  (+1 more)
srcs/utils/: config_validate.cc  config_validate.h
tests/: CMakeLists.txt  db_config_test.cc  hello_test.cc
(+52 files in other folders)
